--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,27 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
   <div class="container">
-    <ul class="nav nav-tabs">
+    <!-- ***************************************************Navigation Bar****************************************-->
+    <ul class="nav nav-tabs"> 
       <li><%= link_to "Bloccit", root_path %></li>
       <li><%= link_to "About", about_path %></li>
+      
+      <!-- User greeting Sign up, Sign in or Sign out -->
+      <div class="pull-right user-info">
+        <% if current_user %>
+          Hello <%= current_user.email %>! <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to "Sign In", new_user_session_path %> or
+          <%= link_to "Sign Up", new_user_registration_path %>
+        <% end %>
+      </div>
+      <!-- User greeting Sign up, Sign in or Sign out END -->
     </ul>
+    <!-- ***************************************************Navigation Bar END*************************************-->
+
+    <!--***************************************** Notifications and alerts**************************************** -->
     <% if flash[:notice] %>
       <div class="alert alert-success">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -30,7 +46,7 @@
         <%= flash[:alert]%>
       </div>
     <% end %>
-
+    <!--***************************************** Notifications and alerts END************************************* -->
     <%= yield %>
   </div>
   
