--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,13 @@
       
       <!-- User greeting Sign up, Sign in or Sign out -->
       <div class="pull-right user-info">
-        <% if current_user %>
-          Hello <%= current_user.email %>! <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-        <% else %>
-          <%= link_to "Sign In", new_user_session_path %> or
-          <%= link_to "Sign Up", new_user_registration_path %>
-        <% end %>
-      </div>
+           <% if current_user %>
+             Hello <%= current_user.email %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+           <% else %>
+             <%= link_to "Sign In", new_user_session_path %> or
+             <%= link_to "Sign Up", new_user_registration_path %>
+           <% end %>
+         </div>
       <!-- User greeting Sign up, Sign in or Sign out END -->
     </ul>
     <!-- ***************************************************Navigation Bar END*************************************-->
